# compost

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  LICENSE  README.md  ROADMAP.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  decision.yml  feature.yml
.github/workflows/: asr-smoke.yml  ci.yml  release.yml
cli/: README.md  package.json  tsconfig.json
cli/contracts/: transcribe-request.schema.json
cli/scripts/: copy-transcriber.mjs  generate-schemas.mjs
cli/src/: engine.ts  errors.ts  index.ts  legacy_client.ts  logging.ts  output.ts  router.ts  transcriber_client.contract.test.ts  transcriber_client.test.ts  transcriber_client.ts
cli/templates/: AGENTS.md  config.toml  seed.md
docs/: README.md  codebook-category-audit.md  cowork.md  design-analytic-memos.md  design-codebook-merge-fork-import.md  dogfood-bocashi-memos.md  dogfood-edges-ecotones-duplicate-merge.md  dogfood-edges-ecotones-findings.md  dogfood-hardening-plan.md  host-llm-routing.md  install.md  north-star-addendum.md  north-star-humans-and-agents.md  onboarding-journey.md  provenance-deepening-design.md  quickstart.md  spike-tauri-packaging.md  transcription.md  troubleshooting.md
evals/: README.md  package.json
native/: .gitignore  Package.swift  README.md
plugin/: README.md  package.json  tsconfig.json
provenance/: README.md  package.json  tsconfig.json
retrieval/: README.md  package.json  tsconfig.json
schema/: CHANGELOG.md  README.md  answer.schema.json  cues.taxonomy.json  events.schema.json  frames.taxonomy.json  status.schema.json  transcript.schema.json
scripts/: dogfood-v0.1.0.sh
transcriber/: .dockerignore  Dockerfile  README.md  compose.yaml  pyproject.toml
transcriber/app/: __init__.py  asr.py  asr_parakeet.py  cue_parser.py  diarization.py  frame_annotation.py  frames.py  health.py  legacy.py  legacy_cli.py  main.py  pipeline.py  pptx_export.py  prosody.py  shot_change.py  silence_typer.py  transcribe_cli.py  vad.py
transcriber/app/routes/: __init__.py  legacy.py  transcribe.py
transcriber/scripts/: asr_smoke.py  export_contracts.py  export_transcript_fixture.py
transcriber/tests/: native_fixture.py  test_asr_parakeet.py  test_contracts.py  test_cue_parser.py  test_diarization.py  test_frame_annotation.py  test_frames.py  test_health.py  test_legacy.py  test_legacy_route.py  test_pptx_export.py  test_prosody.py  test_silence_typer.py  test_transcribe_route.py  test_transcript_schema.py  test_vad.py
transcriber/tests/fixtures/: native_transcript.json
web/: README.md  next.config.mjs  package.json  tsconfig.json
(+342 files in other folders)
