[project]
name = "compost-transcriber"
version = "0.1.2rc1"
description = "Compost descriptive transcriber: WhisperX + pyannote + Silero VAD + Whisper-event-tags, plus frame extraction and legacy ingest."
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Juan Reina" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
# Pinned in their own M1 issues (#9-#15) — kept out of the base install so
# the skeleton boots quickly without pulling multi-GB ML wheels.
asr = [
    "whisperx",
    "pyannote.audio>=3.3",
    "silero-vad",
    # WhisperX brings these transitively but pinning lets the lock file note
    # the M1-Mac-friendly compute path.
    "torch>=2.3",
    "torchaudio>=2.3",
    "ffmpeg-python",
]
# Native Apple-Silicon (Metal) path (#176/#183): Parakeet ASR + pyannote-on-MPS.
# No whisperx/ctranslate2 — the default native engine is Parakeet (parakeet-mlx).
# Provisioned by `compost setup --provision-native`.
native = [
    "parakeet-mlx",
    "pyannote.audio>=3.3",
    "silero-vad",
    "torchaudio>=2.3",
    "ffmpeg-python",
]
frames = [
    "imagehash",
    "Pillow",
]
legacy = [
    "pdfminer.six",
    "pdfplumber",
    "python-docx",
    "python-pptx",
    "openpyxl",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]
